[package]
name = "gl_context"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["gl_context"]
description = "opengl context api helpers"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-gl_context.git"
homepage = "https://github.com/nathanfaucett/rs-gl_context"

exclude = ["examples"]

[dependencies]
gl = "*"
regex = "0.1.75"

hash_map = {git = "https://github.com/nathanfaucett/rs-hash_map.git"}
insert = {git = "https://github.com/nathanfaucett/rs-insert.git"}
map = {git = "https://github.com/nathanfaucett/rs-map.git"}
