[package]
name = "example"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies]
gl = "0.6.0"
glutin = "0.6.0"
time = "0.1"

[dependencies.gl_context]
path = ".."

[dependencies.pseudo_random]
git = "https://github.com/nathanfaucett/rs-pseudo_random.git"

[dependencies.num]
git = "https://github.com/nathanfaucett/rs-num.git"

[dependencies.mat4]
git = "https://github.com/nathanfaucett/rs-mat4.git"
