[package]
name = "complex"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies]
gl = "0.6.1"
glutin = "0.6.1"
time = "0.1.35"

[dependencies.gl_context]
path = "../.."

[dependencies.rng]
git = "https://github.com/nathanfaucett/rs-rng.git"
[dependencies.pseudo_random]
git = "https://github.com/nathanfaucett/rs-pseudo_random.git"

[dependencies.mat4]
git = "https://github.com/nathanfaucett/rs-mat4.git"
