[package]
name = "complex"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[package.metadata.android]
label = "complex"

[[bin]]
name = "complex"
path = "src/main.rs"

[dependencies]
gl = "*"
glutin = "*"
time = "0.1"

gl_context = {path = "../.."}

rng = {git = "https://github.com/nathanfaucett/rs-rng.git"}
prng = {git = "https://github.com/nathanfaucett/rs-prng.git"}

mat4 = {git = "https://github.com/nathanfaucett/rs-mat4.git"}
