[package]
name = "webgl_sdl"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[package.metadata.android]
label = "webgl_sdl"

[[bin]]
name = "webgl_sdl"
path = "src/main.rs"

[dependencies]
gl = "*"
sdl2 = "*"
time = "0.1"
webplatform = {git = "https://github.com/tcr/rust-webplatform"}

gl_context = {path = "../.."}
